# WebCPlusPlus

./: .gitignore  AUTHORS  CLAUDE.md  CMakeLists.txt  COPYING  CREDITS  ChangeLog  Doxyfile  INSTALL  INSTALL.md  License-Change.md  README  README.md  THIRD-PARTY-NOTICES  TODO  Webcpp.filelist  Webcpp.kdevelop  Webcpp.spec  WebcppScheme2.dtd  aclocal.m4  changes.html  config.h.in  configure  configure.in  configure.in.in  docs.html  mkrelease  setup  subdirs  webcpp.kdevprj  webcpp.lsm
.claude/skills/add-language/: SKILL.md
.claude/skills/add-language/references/: adding-new-rules.md  rule-flags.md
.github/workflows/: cmake-single-platform.yml
admin/: am_edit
tests/: highlight_test_helper.h  test_ada_highlight.cpp  test_asp_highlight.cpp  test_assembly_backslash.cpp  test_assembly_highlight.cpp  test_basic_highlight.cpp  test_batch_highlight.cpp  test_c_backslash.cpp  test_c_highlight.cpp  test_cg_highlight.cpp  test_child_languages.cpp  test_clips_highlight.cpp  test_clojure_highlight.cpp  test_cplusplus_backslash.cpp  test_cplusplus_highlight.cpp  test_cplusplus_multiline_string.cpp  test_csharp_highlight.cpp  test_csharp_multiline_string.cpp  test_css_backslash.cpp  test_css_highlight.cpp  test_d_highlight.cpp  test_dart_highlight.cpp  test_elixir_highlight.cpp  test_emf_highlight.cpp  test_euphoria_highlight.cpp  test_fortran_highlight.cpp  test_fsharp_backslash.cpp  test_fsharp_highlight.cpp  test_fsharp_multiline_comment.cpp  test_fsharp_multiline_string.cpp  test_gherkin_highlight.cpp  test_glsl_highlight.cpp  test_go_highlight.cpp  test_groovy_highlight.cpp  test_haskell_backslash.cpp  test_haskell_highlight.cpp  test_hlsl_highlight.cpp  test_html_highlight.cpp  test_html_multiline_comment.cpp  test_java_highlight.cpp  (+55 more)
webcpp/: .nautilus-metafile.xml  cfdatapair.cpp  cfdatapair.h  cffile.cpp  cffile.h  defdebug.h  deflangs.h  defparse.h  defsys.h  driver.cpp  driver.h  engine.cpp  engine.h  engine_options.cpp  engine_options.h  html_writer.cpp  html_writer.h  lang_factory.cpp  lang_factory.h  lang_rules.h  langada.cpp  langada.h  langasm.cpp  langasm.h  langasp.cpp  langasp.h  langbasic.cpp  langbasic.h  langbatch.cpp  langbatch.h  langc.cpp  langc.h  langcg.cpp  langcg.h  langclips.cpp  langclips.h  langclojure.cpp  langclojure.h  langcpp.cpp  langcpp.h  (+109 more)
webcpp/themes/: .nautilus-metafile.xml  all2scs2.sh  aqua.Scs2  berries-dark.Scs2  berries-light.Scs2  bipolar.Scs2  blacknblue.Scs2  blind.Scs2  blue.Scs2  bright.Scs2  bright2.Scs2  bright3.Scs2  bruised.Scs2  bubblegum.Scs2  contrast.Scs2  darkness.Scs2  decent.Scs2  desert.Scs2  dream.Scs2  dull.Scs2  easter.Scs2  fluke.Scs2  golden.Scs2  greenlcd.Scs2  greyish.Scs2  ide-anjuta.Scs2  ide-devcpp.Scs2  ide-jbuilder4.Scs2  ide-jcreator2.Scs2  ide-kdev.Scs2  ide-msvcpp.Scs2  ide-synedit.Scs2  imperial.Scs2  jungle.Scs2  mint.Scs2  navy.Scs2  neon.Scs2  neon2.Scs2  night.Scs2  nightvision.Scs2  (+21 more)
webcppui/: AUTHORS  ChangeLog  README  webcppui  webcppui.glade  webcppui.gladep
